--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -6,25 +6,24 @@ spring.profiles.active=dev
 
 # MySQL
 spring.datasource.url=jdbc:mysql://backend-mysql:3306/backend_db?useSSL=false&serverTimezone=Asia/Shanghai
-spring.datasource.username=backend_user
-spring.datasource.password=123456
+spring.datasource.username=${MYSQL_USER}
+spring.datasource.password=${MYSQL_PASSWORD}
 spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
 
 # JPA
 spring.jpa.hibernate.ddl-auto=update
 spring.jpa.show-sql=true
 spring.jpa.properties.hibernate.format_sql=true
-spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.MySQL8Dialect
 
 # JWT 15 minutes 1 day
-jwt.secret=mysecretkeymysecretkeymysecretkey
+jwt.secret=${JWT_SECRET}
 jwt.expiration=900000
 jwt.refreshExpiration=86400000
 
 # Redis
 spring.redis.host=backend-redis
 spring.redis.port=6379
-spring.redis.password=123456
+spring.redis.password=${REDIS_PASSWORD}
 spring.redis.timeout=2000
 
 spring.datasource.hikari.minimum-idle=5
@@ -39,16 +38,18 @@ springdoc.api-docs.enabled=true
 springdoc.api-docs.path=/v3/api-docs
 springdoc.swagger-ui.path=/swagger-ui.html
 
-# RabbitMQ ????
+# RabbitMQ
 spring.rabbitmq.host=backend-rabbitmq
 spring.rabbitmq.port=5672
-spring.rabbitmq.username=guest
-spring.rabbitmq.password=guest
+spring.rabbitmq.username=${RABBITMQ_DEFAULT_USER}
+spring.rabbitmq.password=${RABBITMQ_DEFAULT_PASS}
 
-# RabbitMQ ????, ????????? ????
-app.rabbitmq.queue=short-url-queue
-app.rabbitmq.routingKey=short-url-routing
+# RabbitMQ Short URL
 app.rabbitmq.exchange=short-url-exchange
+app.rabbitmq.routingKey=short-url-routing
+app.rabbitmq.queue=short-url-queue
+
+
 
 
 
