--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -49,6 +49,14 @@ app.rabbitmq.exchange=short-url-exchange
 app.rabbitmq.routingKey=short-url-routing
 app.rabbitmq.queue=short-url-queue
 
+# RabbitMQ Retry
+spring.rabbitmq.listener.simple.retry.enabled=true
+spring.rabbitmq.listener.simple.retry.max-attempts=5
+spring.rabbitmq.listener.simple.retry.initial-interval=2000
+spring.rabbitmq.listener.simple.retry.multiplier=2.0
+spring.rabbitmq.listener.simple.retry.max-interval=10000;
+
+
 
 
 
