--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -7,8 +7,8 @@ services:
       - .env
     build:
       context: .   # 让 Docker 自动构建最新的代码
-      dockerfile: Dockerfile  #  指定 Dockerfile
-    image: backend-app-image  # 你的 Spring Boot 镜像
+      dockerfile: docker/Dockerfile  #  指定 Dockerfile
+    image: backend-app-image  # Spring Boot 镜像
     container_name: backend-app
     restart: always
     depends_on:
@@ -48,7 +48,7 @@ services:
     ports:
       - "80:80"   # 映射 80 端口
     volumes:
-      - ./nginx.conf:/etc/nginx/nginx.conf:ro  # 绑定 Nginx 配置文件
+      - ./docker/nginx.conf:/etc/nginx/nginx.conf:ro  # 绑定 Nginx 配置文件
       - ./html:/usr/share/nginx/html:ro   # 挂载 index.html
 
   redis:
@@ -61,7 +61,7 @@ services:
       REDIS_PASSWORD: ${REDIS_PASSWORD}
     command: redis-server --requirepass ${REDIS_PASSWORD} --bind 0.0.0.0  # 让 Redis 允许外部访问 Testing
     volumes:
-      - ./redis.conf:/usr/local/etc/redis/redis.conf  # 挂载 redis.conf 配置文件
+      - ./docker/redis.conf:/usr/local/etc/redis/redis.conf  # 挂载 redis.conf 配置文件
       - ./data:/data  # 持久化 Redis 数据
 
     # RabbitMQ 队列
